--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "firebase": "^9.18.0",
+    "jest-canvas-mock": "^2.5.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
