--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "debounce": "^1.2.1",
     "firebase": "^9.18.0",
     "jest-canvas-mock": "^2.5.0",
     "lottie-react": "^2.4.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/jest": "^29.5.0",
     "tailwindcss": "^3.2.7"
   }
